Fixed mobile spacing and move info sessions to new section

--- a/public/style.css
+++ b/public/style.css
@@ -80,10 +80,6 @@ button {
   margin: 0 auto;
 }
 
-.text-center-left {
-  text-align: center;
-  margin-left: -200px;
-}
 .center {
   text-align: center;
   margin: auto;
@@ -243,6 +239,7 @@ h2 {
 
 .timeline {
   margin-bottom: -150px;
+  overflow-x: scroll;
 }
 
 @media (max-width: 900px) {
